Renamed plot component and used mat container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
-<div class="main">
-  <app-header></app-header>
-
-  <app-plotly-example></app-plotly-example>
-</div>
+<mat-sidenav-container>
+  <mat-sidenav-content class="sidenav-content">
+    <app-header></app-header>
+    <main class="content">
+      <div class="control">
+        <app-plotly-example></app-plotly-example>
+      </div>
+    </main>
+  </mat-sidenav-content>
+</mat-sidenav-container>
