Created a horizontal movable divider example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <app-header></app-header>
     <main class="content">
       <div class="control">
-        <app-plotly-example></app-plotly-example>
+        <app-integration-view></app-integration-view>
       </div>
     </main>
   </mat-sidenav-content>
