Created movable splitters and reorganized files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,10 @@
     <app-header></app-header>
     <main class="content">
       <div class="control">
+<!--        <app-vertical-splitter>-->
+<!--          <ng-template #left>Tipsy</ng-template>-->
+<!--          <ng-template #right>Lala</ng-template>-->
+<!--        </app-vertical-splitter>-->
         <app-integration-view></app-integration-view>
       </div>
     </main>
