--- a/src/app/widgets/splitter/vertical-splitter/vertical-splitter.component.html
+++ b/src/app/widgets/splitter/vertical-splitter/vertical-splitter.component.html
@@ -2,7 +2,7 @@
   <div class="block left" #leftBlock>
     <ng-container [ngTemplateOutlet]="left" ></ng-container>
   </div>
-  <div class="slider" #slider>slider</div>
+  <div class="slider" #slider draggable="false">slider</div>
   <div class="block right">
     <ng-container [ngTemplateOutlet]="right"></ng-container>
   </div>
