added image control elements

--- a/src/app/widgets/integration/integration-control/integration-control.component.html
+++ b/src/app/widgets/integration/integration-control/integration-control.component.html
@@ -1,5 +1,5 @@
-<mat-tab-group>
-  <mat-tab label="Image">Image Controls</mat-tab>
+<mat-tab-group style="height: 100%;">
+  <mat-tab label="Image"><app-image-control></app-image-control></mat-tab>
   <mat-tab label="Pattern">Pattern Controls</mat-tab>
   <mat-tab label="Overlays">Overlay Controls</mat-tab>
   <mat-tab label="Phases">Phase Controls</mat-tab>
