--- a/src/app/widgets/splitter/horizontal-splitter/horizontal-splitter.component.html
+++ b/src/app/widgets/splitter/horizontal-splitter/horizontal-splitter.component.html
@@ -2,7 +2,7 @@
   <div class="block top" #topBlock>
     <ng-container [ngTemplateOutlet]="top" ></ng-container>
   </div>
-  <div class="slider" #slider draggable="false">slider</div>
+  <div class="slider" #slider draggable="false"></div>
   <div class="block bottom">
     <ng-container [ngTemplateOutlet]="bottom"></ng-container>
   </div>
