--- a/src/app/widgets/integration/integration-control/integration-control.component.css
+++ b/src/app/widgets/integration/integration-control/integration-control.component.css
@@ -7,3 +7,9 @@
   height: 100%;
 
 }
+
+::ng-deep.mat-tab-label, ::ng-deep.mat-tab-label-active{
+  min-width: 100px!important;
+  padding: 3px!important;
+  margin: 3px!important;
+}
