--- a/src/app/widgets/splitter/horizontal-splitter/horizontal-splitter.component.css
+++ b/src/app/widgets/splitter/horizontal-splitter/horizontal-splitter.component.css
@@ -12,21 +12,21 @@
 .top {
   overflow: auto;
   height: 50%;
-  background-color: darkcyan;
 }
 
 .bottom {
   flex: 1;
   min-height:0;
   overflow: hidden;
-  background-color: darkblue;
 }
 
 .slider {
   text-align: center;
   text-orientation: revert;
   background-color: orange;
-  height: 30px;
+  border-bottom: 3px solid #000;
+  border-top: 3px solid #000;
+  height: 8px;
   cursor: row-resize;
   user-select: none;
 }
