--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,7 @@
 main {
   position: relative;
   flex: 1;
-  padding: 12px;
+  padding: 0;
   overflow: auto;
   display: flex;
   flex-flow: row wrap;
