--- a/src/app/widgets/integration/integration-control/integration-control.component.css
+++ b/src/app/widgets/integration/integration-control/integration-control.component.css
@@ -10,6 +10,7 @@
 
 ::ng-deep.mat-tab-label, ::ng-deep.mat-tab-label-active{
   min-width: 100px!important;
+  max-height: 35px!important;
   padding: 3px!important;
   margin: 3px!important;
 }
