--- a/src/app/widgets/splitter/vertical-splitter/vertical-splitter.component.css
+++ b/src/app/widgets/splitter/vertical-splitter/vertical-splitter.component.css
@@ -23,10 +23,8 @@
 .slider {
   text-align: center;
   text-orientation: revert;
-  background-color: orange;
-  border-left: 3px solid #000;
-  border-right: 3px solid #000;
-  width: 8px;
+  background-image: linear-gradient(to right, #303031, rgb(63, 63, 64), #303031);
+  width: 6px;
   cursor: col-resize;
   user-select: none;
 }
