Added A working Image Plot Example

--- a/src/app/views/integration/integration.component.html
+++ b/src/app/views/integration/integration.component.html
@@ -1,7 +1,7 @@
 <div class="integrationContainer" #integrationContainer>
   <app-vertical-splitter style="height: 100%;">
     <ng-template #left>
-      Hallo Welt
+      <app-image-plot></app-image-plot>
     </ng-template>
     <ng-template #right>
       <app-horizontal-splitter>
