--- a/src/app/widgets/splitter/horizontal-splitter/horizontal-splitter.component.css
+++ b/src/app/widgets/splitter/horizontal-splitter/horizontal-splitter.component.css
@@ -7,6 +7,7 @@
 
 .block {
   height: 50%;
+  overflow:auto;
 }
 
 .top {
@@ -27,4 +28,5 @@
   height: 7px;
   cursor: row-resize;
   user-select: none;
+  z-index: 3;
 }
