--- a/src/app/widgets/splitter/vertical-splitter/vertical-splitter.component.css
+++ b/src/app/widgets/splitter/vertical-splitter/vertical-splitter.component.css
@@ -7,6 +7,7 @@
 
 .block {
   width: 50%;
+  overflow:auto;
 }
 
 .left {
@@ -27,4 +28,5 @@
   width: 6px;
   cursor: col-resize;
   user-select: none;
+  z-index: 3;
 }
