--- a/src/app/widgets/header/header.component.html
+++ b/src/app/widgets/header/header.component.html
@@ -1,9 +1,8 @@
 <mat-toolbar color="primary" class="toolbar mat-elevation-z4">
   <mat-toolbar-row>
     <mat-nav-list>
-      <button mat-button routerLink="/file" routerLinkActive="active">
-        <mat-icon>folder</mat-icon>
-        <span class="label">File</span>
+      <button mat-button (click)="this.menuClicked.emit()">
+        <mat-icon>dehaze</mat-icon>
       </button>
     </mat-nav-list>
     <div class="stretch"></div>
