--- a/src/app/widgets/menu/sidenav/sidenav.component.html
+++ b/src/app/widgets/menu/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
 <mat-nav-list id="menu">
-  <a mat-list-item (click)="showOpenProjectDialog()">Load Project</a>
+  <a mat-list-item (click)="dioptasServer.load_dummy_model()">Load Project</a>
   <a mat-list-item (click)="showSaveProjectDialog()">Save Project</a>
   <a mat-list-item>Options</a>
 </mat-nav-list>
