--- a/src/app/widgets/integration/integration-footer/integration-footer.component.html
+++ b/src/app/widgets/integration/integration-footer/integration-footer.component.html
@@ -1,11 +1,12 @@
 <mat-toolbar>
   <div id="footerContainer">
     <div id="imagePosition">
-      image pos
+      <div>x: {{imageMousePosition.x |number:'3.1-1'}}</div>
+      <div>y: {{imageMousePosition.y |number:'3.1-1':'en'}}</div>
     </div>
     <div id="patternPosition">
       <div>x: {{patternMousePosition.x |number:'1.3':'en'}}</div>
-      <div>y: {{patternMousePosition.y|number:'1.3':'en'}}</div>
+      <div>y: {{patternMousePosition.y |number:'1.3':'en'}}</div>
     </div>
   </div>
 </mat-toolbar>
