Pattern is now plotted after a change

--- a/src/app/widgets/menu/sidenav/sidenav.component.html
+++ b/src/app/widgets/menu/sidenav/sidenav.component.html
@@ -1,5 +1,7 @@
 <mat-nav-list id="menu">
-  <a mat-list-item (click)="dioptasServer.load_dummy_model()">Load Project</a>
+  <a mat-list-item >Load Project</a>
+  <a mat-list-item (click)="dioptasServer.load_dummy_model()">Load Dummy Project</a>
+  <a mat-list-item (click)="dioptasServer.load_dummy2_model()">Load Dummy2 Project</a>
   <a mat-list-item (click)="showSaveProjectDialog()">Save Project</a>
   <a mat-list-item>Options</a>
 </mat-nav-list>
