implemented the basics for a file dialog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <app-header (menuClicked)="drawer.toggle()"></app-header>
     <main class="content">
       <div class="control">
-        <app-integration-view></app-integration-view>
+        <router-outlet></router-outlet>
       </div>
     </main>
   </mat-sidenav-content>
