added intensity display for mouse position in image

--- a/src/app/widgets/integration/integration-footer/integration-footer.component.css
+++ b/src/app/widgets/integration/integration-footer/integration-footer.component.css
@@ -12,4 +12,17 @@
 
 #patternPosition {
   text-align: left;
+  display: flex;
+  flex-direction: row;
+}
+
+
+#imagePosition {
+  display: flex;
+  flex-direction: row;
+}
+
+#imagePosition > *, #patternPosition > * {
+  display: block;
+  width: 100px;
 }
