--- a/src/app/widgets/integration/integration-footer/integration-footer.component.html
+++ b/src/app/widgets/integration/integration-footer/integration-footer.component.html
@@ -3,6 +3,7 @@
     <div id="imagePosition">
       <div>x: {{imageMousePosition.x |number:'3.1-1'}}</div>
       <div>y: {{imageMousePosition.y |number:'3.1-1':'en'}}</div>
+      <div>int: {{imageMousePosition.intensity}}</div>
     </div>
     <div id="patternPosition">
       <div>x: {{patternMousePosition.x |number:'1.3':'en'}}</div>
