--- a/src/app/widgets/integration/integration-footer/integration-footer.component.html
+++ b/src/app/widgets/integration/integration-footer/integration-footer.component.html
@@ -1,9 +1,16 @@
 <mat-toolbar>
   <div id="footerContainer">
     <div id="imagePosition">
-      <div>x: {{imageMousePosition.x |number:'3.1-1'}}</div>
-      <div>y: {{imageMousePosition.y |number:'3.1-1':'en'}}</div>
-      <div>int: {{imageMousePosition.intensity}}</div>
+      <div id="imageMouseMovePosition">
+        <div>x: {{imageMousePosition.x |number:'3.1-1'}}</div>
+        <div>y: {{imageMousePosition.y |number:'3.1-1':'en'}}</div>
+        <div>int: {{imageMousePosition.intensity}}</div>
+      </div>
+      <div id="imageMouseClickPosition">
+        <div>x: {{imageClickPosition.x |number:'3.1-1'}}</div>
+        <div>y: {{imageClickPosition.y |number:'3.1-1':'en'}}</div>
+        <div>int: {{imageClickPosition.intensity}}</div>
+      </div>
     </div>
     <div id="patternPosition">
       <div>x: {{patternMousePosition.x |number:'1.3':'en'}}</div>
