--- a/src/app/views/integration/integration.component.html
+++ b/src/app/views/integration/integration.component.html
@@ -2,8 +2,8 @@
   <app-vertical-splitter style="height: 100%;">
     <ng-template #left>
       <app-image-plot
-        (mouseMoved)="footer.imageMousePosition=$event"
-        (mouseClicked)="footer.imageClickPosition=$event"
+        (mouseMoved)="imageMousePosition=$event"
+        (mouseClicked)="imageClickPosition=$event"
       ></app-image-plot>
     </ng-template>
     <ng-template #right>
@@ -12,12 +12,16 @@
           <app-integration-control></app-integration-control>
         </ng-template>
         <ng-template #bottom>
-          <app-pattern-plot (mouseMoved)="footer.patternMousePosition=$event"></app-pattern-plot>
+          <app-pattern-plot (mouseMoved)="patternMousePosition=$event"></app-pattern-plot>
         </ng-template>
       </app-horizontal-splitter>
     </ng-template>
   </app-vertical-splitter>
-  <app-integration-footer #footer></app-integration-footer>
+  <app-integration-footer
+    [imageMousePosition]="imageMousePosition"
+    [imageClickPosition]="imageClickPosition"
+    [patternMousePosition]="patternMousePosition"
+  ></app-integration-footer>
 </div>
 
 
