created a base-plot (for patterns) with all relevant mouse interactions

--- a/src/app/views/integration/integration.component.html
+++ b/src/app/views/integration/integration.component.html
@@ -16,6 +16,10 @@
             (mouseMoved)="patternMousePosition=$event"
             (mouseClicked)="patternClickPosition=$event"
           ></app-pattern-plot>
+<!--          <app-pattern-plot-plotly-->
+<!--            (mouseMoved)="patternMousePosition=$event"-->
+<!--            (mouseClicked)="patternClickPosition=$event"-->
+<!--          ></app-pattern-plot-plotly>-->
         </ng-template>
       </app-horizontal-splitter>
     </ng-template>
