--- a/src/app/widgets/plots/pattern-plot/pattern-plot.component.html
+++ b/src/app/widgets/plots/pattern-plot/pattern-plot.component.html
@@ -1,11 +1,3 @@
-<plotly-plot
-  [data]="graph.data"
-  [layout]="graph.layout"
-  [config]="graph.config"
-  [style]="graph.style"
-  [useResizeHandler]="true"
-
-  (hover)="onHover($event)"
-  (plotlyClick)="onClick($event)"
-></plotly-plot>
-
+<div id="pattern-plot-container" #container>
+  <div id="pattern-plot"></div>
+</div>
