implemented some working tests with spies and harnesses for image-control component

--- a/src/app/widgets/integration/integration-control/image-control/image-control.component.html
+++ b/src/app/widgets/integration/integration-control/image-control/image-control.component.html
@@ -46,7 +46,7 @@
     <div id="filePath">
       <mat-form-field>
         <mat-label>Filename</mat-label>
-        <input matInput class="form-control" name="filename" autocomplete="off" [(ngModel)]="imageFileName">
+        <input matInput class="form-control" name="filename" autocomplete="off" [(ngModel)]="imageFilename">
       </mat-form-field>
       <mat-form-field>
         <mat-label>Folder</mat-label>
