--- a/src/app/widgets/menu/sidenav/sidenav.component.html
+++ b/src/app/widgets/menu/sidenav/sidenav.component.html
@@ -1,7 +1,6 @@
 <mat-nav-list id="menu">
   <a mat-list-item >Load Project</a>
-  <a mat-list-item (click)="dioptasServer.load_dummy_model()">Load Dummy Project</a>
-  <a mat-list-item (click)="dioptasServer.load_dummy2_model()">Load Dummy2 Project</a>
-  <a mat-list-item (click)="showSaveProjectDialog()">Save Project</a>
+  <a mat-list-item (click)="load_dummy_project()">Load Dummy Project</a>
+  <a mat-list-item (click)="load_dummy2_project()">Load Dummy2 Project</a>
   <a mat-list-item>Options</a>
 </mat-nav-list>
