Created layout for the overlay component

--- a/src/app/widgets/integration/integration-control/integration-control.component.html
+++ b/src/app/widgets/integration/integration-control/integration-control.component.html
@@ -1,6 +1,6 @@
-<mat-tab-group style="height: 100%;">
+<mat-tab-group style="height: 100%;" [selectedIndex]="2">
   <mat-tab label="Image"><app-image-control></app-image-control></mat-tab>
   <mat-tab label="Pattern">Pattern Controls</mat-tab>
-  <mat-tab label="Overlays">Overlay Controls</mat-tab>
+  <mat-tab label="Overlays"><app-overlay-control></app-overlay-control></mat-tab>
   <mat-tab label="Phases">Phase Controls</mat-tab>
 </mat-tab-group>
