connected scale and offset step to overlay table items

--- a/src/app/widgets/integration/integration-control/overlay-control/overlay-table-item/overlay-table-item.component.html
+++ b/src/app/widgets/integration/integration-control/overlay-control/overlay-table-item/overlay-table-item.component.html
@@ -18,7 +18,8 @@
     class="numberFormField"
   >
     <input matInput class="form-control"
-           type="number" name="value" value="0"
+           type="number" name="scale" [step]="scaleStep"
+           [(ngModel)]="overlayItem.scaling"
     >
   </mat-form-field>
 
@@ -27,7 +28,8 @@
     class="numberFormField"
   >
     <input matInput class="form-control"
-           type="number" name="value" value="0"
+           type="number" name="offset" [step]="offsetStep"
+           [(ngModel)]="overlayItem.offset"
     >
   </mat-form-field>
 </div>
