--- a/src/app/widgets/integration/integration-control/overlay-control/overlay-table/overlay-table.component.html
+++ b/src/app/widgets/integration/integration-control/overlay-control/overlay-table/overlay-table.component.html
@@ -11,6 +11,8 @@
       [overlayItem]="overlay"
       (selected)="overlaySelected(i)"
       [highlighted]="selectedOverlayIndex===i"
+      [scaleStep]="scaleStep"
+      [offsetStep]="offsetStep"
     ></app-overlay-table-item>
   </div>
 
