--- a/src/app/widgets/integration/integration-control/overlay-control/overlay-control.component.html
+++ b/src/app/widgets/integration/integration-control/overlay-control/overlay-control.component.html
@@ -29,22 +29,28 @@
       </button>
     </div>
     <div class="overlay-list">
-      <app-overlay-table [overlays]="overlays"></app-overlay-table>
+      <app-overlay-table
+        [overlays]="overlays"
+        [offsetStep]="+offsetStepControl.value"
+        [scaleStep]="+scaleStepControl.value"
+      >
+      </app-overlay-table>
     </div>
     <div class="options">
       <div class="step-sizes">
         <mat-form-field>
           <mat-label>Scale Step</mat-label>
           <input matInput class="form-control"
-                 type="number" name="value" placeholder="Scale Step" value="1"
-                 min="1"
+                 type="number" name="value" placeholder="Scale Step" value="0.1"
+                 step=0.1 min="0" #scaleStepControl
           >
         </mat-form-field>
 
         <mat-form-field>
           <mat-label>Offset Step</mat-label>
           <input matInput class="form-control"
-                 type="number" name="value" placeholder="Offset Step" value="0"
+                 type="number" name="value" placeholder="Offset Step" value="100"
+                 step=10 min="0" #offsetStepControl
           >
         </mat-form-field>
       </div>
